tests/parser/invalidinput/empty_construced.idp
vocabulary V{
	type T constructed from {}
}

theory T:V{
}

structure S:V{
	T={A;B}

}

procedure main(){
	print(S)
}
